00-first-app-on-kubernetes/01-nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx # spec.template.metadata.labels.app: nginx 
  template: # pod 
    metadata:
      labels:
        app: nginx # <- matchLabels.app: nginx -->  Service selector
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
