00-first-app-on-kubernetes/02-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx # kind: Deployment :: spec.template.metadata.labels.app: nginx 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30180
